apps/affine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: nori-cloud
  labels:
    app: affine
spec:
  type: ClusterIP
  selector:
    app: affine
  ports:
    - port: 3010
      targetPort: 3010
      name: http
